# Polymarket

./: .env.example  .gitignore  README.md  analyze_iv_failure_clustering.py  analyze_iv_failures.py  check_code.sh  pyproject.toml  thesis_proposal.tex  wandb  wandb_data_analysis.py
chainlink_websocket_feed/: test_polymarket_ws.py  test_polymarket_ws_simple.py
data_collectors/clob_historical/: README.md  example_usage.py  orderbook_collector.py  orderbook_reconstructor.py  requirements.txt
data_collectors/leaderboard/: README.md  collect_leaderboard.py  find_top_traders.py  query_examples.py  validate_parquet.py
data_collectors/market_snapshot/: market_snapshot_collector.py
data_collectors/trader_history/: README.md  trader_historical_data_collector.py
docs/scraped/: docs_chain_link_enhanced_20251003_021321.txt  polymarket_docs.txt
orderbook_snapshots/: .gitignore  README.md
orderbook_snapshots/config/: streamer_config.yaml  streamer_config_btc_15min.yaml  streamer_config_btc_hourly.yaml  streamer_config_eth_15min.yaml  streamer_config_eth_hourly.yaml  telegram_bot.yaml
orderbook_snapshots/launchd/: com.polymarket.orderbook-streamer-btc-15min.plist  com.polymarket.orderbook-streamer-btc-hourly.plist  com.polymarket.orderbook-streamer-eth-15min.plist  com.polymarket.orderbook-streamer-eth-hourly.plist  com.polymarket.orderbook-streamer.plist
orderbook_snapshots/scripts/: check_test_progress.py  generate_schedule.py  generate_schedule_btc_hourly.py  generate_schedule_eth_15min.py  generate_schedule_eth_hourly.py  health_check.py  monitor_stream.py  rename_to_utc.py  service_monitor.py  stream_continuous.py  stream_continuous_btc_15min.py  stream_continuous_btc_hourly.py  stream_continuous_eth_15min.py  (+8 more)
random/: analyze_address_deposits.py  analyze_depositor_metrics.py  analyze_deposits.py  collect_address_data.py  convert_to_parquet.py  depositor_threshold_analysis.py  docs_etherscan_io_enhanced_20251028_195504.txt  etherscan_api_client.py  generate_deposit_timeseries.py  generate_simple_timeseries.py  monte_carlo_aggressive_surge.py  monte_carlo_deposit_forecast.py
scripts/: analyze_btc_15min_trade_outcomes.py  batch_fetch_clob_data.py  batch_fetch_clob_data_consolidated.py  btc_15min_market_manager.py  btc_15min_orderbook_daemon.py  calculate_position_based_pnl.py  coin_flip_simulation_parallel.py  consolidate_clob_ticks.py  consolidated_writer.py  enrich_btc_15min_trades_with_outcomes.py  fetch_bitcoin_hourly_markets_from_api.py  fetch_btc_15min_markets_from_api.py  fetch_clob_tick_data.py  find_active_15min_btc.py  generate_btc_updown_schedule.py  market_categorizer.py  polymarket_data_access.py  run_collection.sh  setup_polymarket_api.py  stream_orderbook_realtime.py  test_active_15min_market.py  test_orderbook_rest_minimal.py  test_orderbook_snapshots.py  test_orderbook_websocket_minimal.py  test_streaming_short.py
usdai/: docs_usd_ai_enhanced_20251015_232820.txt  pure_cost_comparison.py  usdai_vs_cloud_cost_analysis.py
(+406 files in other folders)
