[project]
name = "polymarket-data-collection"
version = "1.0.0"
description = "Comprehensive Polymarket data collection and analysis tools"
authors = [
    { name = "BT Research" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "polars>=0.19.0",
    "requests>=2.31.0",
    "websockets>=11.0.0",
    "python-telegram-bot>=20.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["data_collectors"]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
